--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "generation-schedule-2.0": {
+    "generation-schedule-ui": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/generation-schedule-2.0",
+            "outputPath": "dist/generation-schedule-ui",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -73,10 +73,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "generation-schedule-2.0:build:production"
+              "browserTarget": "generation-schedule-ui:build:production"
             },
             "development": {
-              "browserTarget": "generation-schedule-2.0:build:development"
+              "browserTarget": "generation-schedule-ui:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -84,7 +84,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "generation-schedule-2.0:build"
+            "browserTarget": "generation-schedule-ui:build"
           }
         },
         "test": {
@@ -109,5 +109,5 @@
       }
     }
   },
-  "defaultProject": "generation-schedule-2.0"
+  "defaultProject": "generation-schedule-ui"
 }
