--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "generation-ui",
+  "name": "generation-schedule-ui",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:gh-pages": "ng build --prod --base-href \"https://kdwilich.github.io/generation-schedule-ui/\"",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "npx angular-cli-ghpages --dir=dist/generation-schedule-ui"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +33,7 @@
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
